2017.10/_sources/plugins/available/vsearch/dereplicate-sequences.txt
dereplicate-sequences: Dereplicate sequences.
=============================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime vsearch dereplicate-sequences [OPTIONS]

     Dereplicate sequence data and create a feature table and feature
     representative sequences. Feature identfiers in the resulting artifacts
     will be the sha1 hash of the sequence defining each feature. If clustering
     of features into OTUs is desired, the resulting artifacts can be passed to
     the cluster_features_* methods in this plugin.

   Options:
     --i-sequences PATH              Artifact: SampleData[Sequences]  [required]
                                     The sequences to be dereplicated.
     --o-dereplicated-table PATH     Artifact: FeatureTable[Frequency] [required
                                     if not passing --output-dir]
                                     The table of
                                     dereplicated sequences.
     --o-dereplicated-sequences PATH
                                     Artifact: FeatureData[Sequence] [required if
                                     not passing --output-dir]
                                     The dereplicated
                                     sequences.
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Dereplicate sequences.

   Dereplicate sequence data and create a feature table and feature
   representative sequences. Feature identfiers in the resulting artifacts
   will be the sha1 hash of the sequence defining each feature. If clustering
   of features into OTUs is desired, the resulting artifacts can be passed to
   the cluster_features_* methods in this plugin.

   Parameters
   ----------
   sequences : SampleData[Sequences]
       The sequences to be dereplicated.

   Returns
   -------
   dereplicated_table : FeatureTable[Frequency]
       The table of dereplicated sequences.
   dereplicated_sequences : FeatureData[Sequence]
       The dereplicated sequences.</pre>
       </div>
     </div>
   </div>